# rust-intermediate

./: Cargo.toml
intermediat-concepts/: Cargo.toml
intermediat-concepts/src/: main.rs
intermediate-concepts/: Cargo.toml
intermediate-concepts/src/: closures.rs  errors.rs  generics.rs  macros.rs  main.rs  os_commands.rs  traits.rs
mining-pool-api/: Cargo.toml
mining-pool-api/src/: db.rs  main.rs  miner.rs  miner_controller.rs  util.rs  wallet.rs  wallet_controller.rs
rust-docker/: Cargo.toml  docker-alpine.Dockerfile  docker-centos.Dockerfile  docker-debian.Dockerfile
some_bin/: Cargo.toml
some_bin/src/: main.rs
some_lib/src/: lib.rs  lib_functions.rs
