[package]
name = "mining-pool-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
rand = "0.8.4"
serde = "1.0.106"
serde_json = "1.0.51"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
